# Multi-Agents_Underwriter

./: .gitignore  README.md  TEST_INSTRUCTIONS.md  app.py  config.yaml  pyproject.toml  requirements.txt
audit_reports/: audit_report_Ahmed_Garcia.md  audit_report_James_Smith.md
audit_reports/json/: decision_Ahmed_Garcia.json  decision_James_Smith.json
data/: generate_synthetic.py
data/chat_conversations/: 20260620_033317.json  20260620_065555.json  20260620_084308.json  20260620_123412.json  20260620_125831.json
data/synthetic_applicants/: applicant_0001.json  applicant_0002.json  applicant_0003.json  applicant_0004.json  applicant_0005.json  applicant_0006.json  applicant_0007.json  applicant_0008.json  applicant_0009.json  applicant_0010.json  applicant_0011.json  applicant_0012.json  applicant_0013.json  applicant_0014.json  applicant_0015.json  applicant_0016.json  applicant_0017.json  (+13 more)
demo/: pipeline.py  test_questionnaire_cli.py
tests/: conftest.py  test_application_schema.py  test_base_agent.py  test_base_agent_chat.py  test_chat_models.py  test_chat_persistence.py  test_chat_summary.py  test_compliance_agent.py  test_config.py  test_debate_orchestrator.py  test_decision_logger.py  test_decision_synthesis.py  test_evidence_decision_recalc.py  test_evidence_handling.py  test_financial_agent.py  test_integration_agents.py  test_integration_orchestrator.py  test_llm_client.py  test_medical_agent.py  test_medical_agent_intent.py  test_questionnaire_models.py  test_report_generator.py  test_rule_engine.py  test_test_questionnaire.py  test_vector_store.py
(+591 files in other folders)
