[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "underwriting"
version = "0.1.0"
description = "Multi-Agent Underwriting Rules Engine for insurance risk assessment"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.28.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "pypdf2>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
